Fix account delete dialog width and heading icon alignment

--- a/app/assets/stylesheets/app/account_settings/_show.scss
+++ b/app/assets/stylesheets/app/account_settings/_show.scss
@@ -14,7 +14,6 @@
   }
 
   .delete-account-tab {
-    max-width: 44.5rem;
     width: 100%;
 
     .label {
@@ -53,19 +52,20 @@
       .body {
         padding: 0;
         width: 100%;
-
-        p {
-          margin: 0 0 1.5rem 0;
-        }
       }
 
       .account-delete-dialog-heading {
+        column-gap: .5rem;
+        display: grid;
+        grid-template-columns: 1.5rem minmax(0, 1fr);
+        grid-template-rows: auto;
         align-items: center;
-        display: flex;
-        gap: .5rem;
         margin: 0 0 .5rem 0;
 
         i {
+          display: block;
+          font-size: 1.5rem;
+          line-height: 1;
           margin: 0;
         }
       }
@@ -75,6 +75,10 @@
       }
 
       .account-delete-dialog-description {
+        margin: 0 0 1.5rem 0;
+      }
+
+      .account-delete-empty-state {
         margin: 0 0 1.5rem 0;
       }
 
